--- a/simplepin/Base.lproj/Main.storyboard
+++ b/simplepin/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="huG-da-3Fq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="huG-da-3Fq">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -26,14 +26,14 @@
                             <rect key="frame" x="0.0" y="548" width="600" height="96"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="aJE-ST-ktU">
-                                    <rect key="frame" x="226" y="38" width="148.5" height="20"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="LFK-rM-2KS">
+                                    <rect key="frame" x="24" y="28" width="552" height="44"/>
                                     <subviews>
-                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="IHb-3h-oxh">
-                                            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="IHb-3h-oxh">
+                                            <rect key="frame" x="266" y="0.0" width="20" height="20"/>
                                         </activityIndicatorView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading bookmarks…" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQs-T6-zFq">
-                                            <rect key="frame" x="28" y="0.0" width="120.5" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Loading bookmarks…" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQs-T6-zFq">
+                                            <rect key="frame" x="216" y="28" width="121" height="16"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -43,8 +43,10 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstItem="aJE-ST-ktU" firstAttribute="centerY" secondItem="Ewi-PO-CL4" secondAttribute="centerY" id="5p8-qQ-WEN"/>
-                                <constraint firstItem="aJE-ST-ktU" firstAttribute="centerX" secondItem="Ewi-PO-CL4" secondAttribute="centerX" id="fRW-Ro-4iz"/>
+                                <constraint firstAttribute="trailing" secondItem="LFK-rM-2KS" secondAttribute="trailing" constant="24" id="1jB-gk-CqV"/>
+                                <constraint firstItem="LFK-rM-2KS" firstAttribute="leading" secondItem="Ewi-PO-CL4" secondAttribute="leading" constant="24" id="447-cb-A0Y"/>
+                                <constraint firstAttribute="bottom" secondItem="LFK-rM-2KS" secondAttribute="bottom" constant="24" id="9Yr-qH-URg"/>
+                                <constraint firstItem="LFK-rM-2KS" firstAttribute="top" secondItem="Ewi-PO-CL4" secondAttribute="top" constant="28" id="Yvk-c9-hfj"/>
                             </constraints>
                         </view>
                         <prototypes>
@@ -281,16 +283,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BCW-EN-vP0">
-                                                    <rect key="frame" x="16" y="12" width="568" height="20"/>
+                                                    <rect key="frame" x="16" y="0.0" width="568" height="44"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRp-ly-QmS">
-                                                            <rect key="frame" x="0.0" y="0.0" width="74.5" height="20"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRp-ly-QmS">
+                                                            <rect key="frame" x="0.0" y="0.0" width="75" height="44"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oEp-m2-JDq">
-                                                            <rect key="frame" x="74" y="0.0" width="493.5" height="20"/>
+                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oEp-m2-JDq">
+                                                            <rect key="frame" x="75" y="0.0" width="494" height="44"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                             <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                                         </textField>
@@ -301,7 +303,14 @@
                                                 <constraint firstItem="BCW-EN-vP0" firstAttribute="leading" secondItem="tZM-FN-NQn" secondAttribute="leadingMargin" constant="8" id="5RI-4I-sgU"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="BCW-EN-vP0" secondAttribute="trailing" constant="8" id="fWX-37-usE"/>
                                                 <constraint firstItem="BCW-EN-vP0" firstAttribute="centerY" secondItem="tZM-FN-NQn" secondAttribute="centerY" id="mUG-tg-YNH"/>
+                                                <constraint firstAttribute="bottom" secondItem="BCW-EN-vP0" secondAttribute="bottom" id="vGt-hi-9wR"/>
+                                                <constraint firstItem="BCW-EN-vP0" firstAttribute="top" secondItem="tZM-FN-NQn" secondAttribute="top" id="vYr-OF-ap5"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="mUG-tg-YNH"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="ceo-lh-31R">
@@ -312,16 +321,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zgf-Ya-113">
-                                                    <rect key="frame" x="16" y="12" width="568" height="20"/>
+                                                    <rect key="frame" x="16" y="0.0" width="568" height="44"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bC-KR-fVK">
-                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="20"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bC-KR-fVK">
+                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="44"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cdz-PU-6SW">
-                                                            <rect key="frame" x="70" y="0.0" width="498" height="20"/>
+                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cdz-PU-6SW">
+                                                            <rect key="frame" x="70" y="0.0" width="498" height="44"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                             <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                                                         </textField>
@@ -330,9 +339,16 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="zgf-Ya-113" secondAttribute="trailing" constant="8" id="39a-gY-dKi"/>
+                                                <constraint firstAttribute="bottom" secondItem="zgf-Ya-113" secondAttribute="bottom" id="6PB-DH-taI"/>
                                                 <constraint firstItem="zgf-Ya-113" firstAttribute="centerY" secondItem="ovR-Mg-ftW" secondAttribute="centerY" id="958-Jk-pnK"/>
                                                 <constraint firstItem="zgf-Ya-113" firstAttribute="leading" secondItem="ovR-Mg-ftW" secondAttribute="leadingMargin" constant="8" id="9SM-mc-c0r"/>
+                                                <constraint firstItem="zgf-Ya-113" firstAttribute="top" secondItem="ovR-Mg-ftW" secondAttribute="top" id="fWA-rp-w13"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="958-Jk-pnK"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
